# SpellCastCheat

./: .gitignore  README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/src/: main.py  train_more_images_main.py  train_test_tune_model.py
backend/src/ai/: extract_grid_nodes.py  model.py
backend/src/business_model/: table.py  tile.py
backend/src/dto/: sequence_model.py  spellcast_result_model.py  tile_model.py
backend/src/logic/: driver.py  table.py  word_finder.py  word_state.py
backend/src/utils/: rename_files.py
frontend/: index.html  package-lock.json  package.json  postcss.config.cjs
frontend/src/: main.tsx
frontend/src/app/: AppRouter.tsx
frontend/src/features/: Home.page.tsx
frontend/src/service/: apiClient.ts  baseClient.ts
frontend/src/styles/: index.pcss
models/: README.md
src/: extract_grid_nodes.py  main.py  model.py  rename_files.py  utils.py
src/ai/: model.py  utils.py
src/logic/: driver.py  table.py  tile.py  word_finder.py
src/utils/: rename_files.py
