[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1"
description = "A brief description of your project."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "opencv-python",       # OpenCV for image processing
    "tensorflow>=2.10.0",  # Adjust the version based on your system
    "numpy>=1.22.0",       # Required for TensorFlow operations
    "pandas>=2.0.3"
]
requires-python = ">=3.12"
